--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-    <script src="/index.js" defer></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="index.js" defer></script>
 
     <title>Frontend Mentor | Age calculator app</title>
 
@@ -65,7 +65,7 @@
             <p class="error"></p>
           </div>
           <button class="button_sub" type="submit">
-            <img src="/assets/images/icon-arrow.svg" alt="icon" class="icon" />
+            <img src="assets/images/icon-arrow.svg" alt="icon" class="icon" />
             <span class="sr-only">Submit</span>
           </button>
         </form>
